# cmake_example

./: CMakeLists.txt  CMakePresets.json  README.md  awesome_unit_tests.cpp  hello_world.cpp
awesome/: CMakeLists.txt
cmake/: install_options.cmake  set_cpp_version.cmake  visibility.cmake
hello_world/: CMakeLists.txt
packaging/: CMakeLists.txt
src/: CMakeLists.txt
src/awesome/: CMakeLists.txt  awesome.cpp  awesome.h  awesome_unit_tests.cpp
src/hello_world/: CMakeLists.txt  hello_world.cpp
